--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: first_test_app
-description: "A new Flutter project."
+description: "STRESSLESS VPN - Secure VPN for unrestricted internet access"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,6 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  # Firebase Core - Required for all Firebase services
+  firebase_core: ^3.8.0
+
+  # Firebase Authentication
+  firebase_auth: ^5.3.3
+
+  # Google Sign-In
+  google_sign_in: ^6.2.2
+
+  # Cloud Firestore for user data
+  cloud_firestore: ^5.5.0
+
+  # Shared Preferences for local storage
+  shared_preferences: ^2.3.3
+
+  # HTTP requests
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -103,7 +121,7 @@ flutter_native_splash:
   # color or background_image is the only required parameter.  Use color to set the background
   # of your splash screen to a solid color.  For background_image, use the path to an image file.
   # If a background_image is specified, color is not used.
-  color: "#42a5f5"
+  color: "#1565C0"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
