--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: first_test_app
+name: stressless_vpn
 description: "STRESSLESS VPN - Secure VPN for unrestricted internet access"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
