--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   # Cloud Firestore for user data
   cloud_firestore: ^5.5.0
 
+  # Firebase Storage for media uploads
+  firebase_storage: ^12.3.4
+
   # Shared Preferences for local storage
   shared_preferences: ^2.3.3
 
