Complete OpenRouter AI Service Integration
 Features implemented:
- OpenRouter AI service with multiple model support
- Dynamic API key configuration and management
- AI chat interface with conversation management
- JSON serialization for AI models and conversations
- Real-time chat with streaming responses
- Model switching (GPT-4o, Claude, Mistral, Gemini, Llama)
- Cost estimation and token tracking
- Conversation history and persistence

 AI Models supported:
- OpenAI: GPT-4o, GPT-4o Mini
- Anthropic: Claude 3.5 Sonnet, Claude 3 Haiku
- Mistral AI: Mistral Large, Mistral Small
- Google: Gemini Pro 1.5
- Meta: Llama 3.1 70B, Llama 3.1 8B

 UI Components added:
- AIChatScreen: Full-featured chat interface
- AI assistant button in main navigation
- API key configuration dialog
- Message history with user/assistant distinction
- Loading states and error handling

 Integration tested successfully:
- AI service initialization working
- Chat interface accessible from main screen
- JSON serialization code generated
- All dependencies properly configured
- App running without errors

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   # HTTP requests
   http: ^1.2.2
 
+  # JSON annotation for serialization
+  json_annotation: ^4.9.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,6 +72,10 @@ dev_dependencies:
 
   # Native splash screen generator
   flutter_native_splash: ^2.4.1
+
+  # JSON serialization code generation
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
