Complete Push Notifications Implementation
 Features implemented:
- Firebase Cloud Messaging (FCM) integration
- Flutter Local Notifications for foreground display
- Background message handler for terminated app state
- Notification channels for Android (VPN, Security, General)
- Notification permissions and settings management
- FCM token generation and management
- Custom notification icons and styling

 Notification Types supported:
- VPN status notifications (connect/disconnect)
- Security alerts with high priority
- General app notifications
- AI assistant notifications
- Custom notification channels with different priorities

 Platform Support:
- Android: Full FCM + Local Notifications
- iOS: FCM + Local Notifications (ready)
- Background/Foreground message handling
- App launch from notification support

 Configuration added:
- Android manifest permissions and services
- Notification icons and colors
- Core library desugaring for compatibility
- Background message handler registration

 Integration tested successfully:
- Notification permissions granted: AuthorizationStatus.authorized
- FCM token generated successfully
- Notification service initialized without errors
- Background handler registered
- All notification channels created
- App running with full notification support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,12 @@ dependencies:
   # Firebase Storage for media uploads
   firebase_storage: ^12.3.4
 
+  # Firebase Cloud Messaging for push notifications
+  firebase_messaging: ^15.1.4
+
+  # Flutter Local Notifications for foreground notifications
+  flutter_local_notifications: ^18.0.1
+
   # Shared Preferences for local storage
   shared_preferences: ^2.3.3
 
